Bug 1540665 - Propagate chrome flags to out-of-process iframes. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D26500